--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <img src="img/new-logo.png" alt="logo" style="width:50px;height:50px;">
+            <img src="img/new-logo.png" alt="logo" style="width:40px;height:40px; float:left">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
